# multithreaded_raylib_base

./: CMakeLists.txt  LICENSE  README.md
src/: app.cpp  app.hpp  configuration.hpp  main.cpp  render.cpp  render.hpp  update.cpp  update.hpp
